[tool.poetry]
name = "un_ds"
version = "0.1.0"
description = ""
authors = ["princelySid <princelysid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
numpy = "^1.22.2"
geopandas = "^0.10.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
